tests/NormalTests/paczka1/small_fuzzy/32108400.err
Error in line 1: VBkO S641 66,2
Error in line 11: aQ01Y74YsAE S882 70,8
Error in line 16: aQ01Y74YsAE A130 -1,8
